fixing Contact-submit-button not responding to click on mobile device and buttons animation issues on narrow mobile screens

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -40,8 +40,9 @@ input {
 }
 
 .submit:hover {
-    padding-block: 9px;
+    /* padding-block: 9px; */
     color: black;
+    transition-duration: 1s;
 }
 
 i {
